@@ -22,6 +22,8 @@
 #undef MANY_DOMAINS
 #undef VALIAS
 #undef ENABLE_AUTH_LOGGING
+#undef ENABLE_SQL_LOGGING
+#undef ENABLE_MYSQL_LIMITS
 
 char *MYSQL_READ_SERVER;
 int MYSQL_READ_PORT;
