@@ -97,13 +97,51 @@ AC_SUBST(auth_inc)
 # Options
 #
 
-AC_MSG_CHECKING(whether to use valias)
+AC_MSG_CHECKING(whether to use native valias)
 AC_ARG_ENABLE(valias,
-			  [  --enable-valias         Enable storage of dotqmail data in the PostgreSQL database ],
+			  [  --enable-valias         Enable native valias, storage of dotqmail data in the PostgreSQL database ],
 			  [ 
 			    AC_DEFINE_UNQUOTED(VALIAS,1,"")
 			    AC_MSG_RESULT(yes)
 			  ], AC_MSG_RESULT(no))
+
+#
+# Authentication logging
+#
+
+AC_MSG_CHECKING(if authentication logging is disabled)
+
+AC_ARG_ENABLE(auth-logging,
+    [  --disable-auth-logging  Disable authentication logging],
+	[
+	   AC_MSG_RESULT(yes)
+    ],
+	[
+	  AC_MSG_RESULT(no)
+	  AC_DEFINE_UNQUOTED(ENABLE_AUTH_LOGGING,1,"")
+    ],
+	[
+	  AC_MSG_RESULT(no)
+	  AC_DEFINE_UNQUOTED(ENABLE_AUTH_LOGGING,1,"")
+    ]
+)
+
+#
+# SQL logging
+#
+
+AC_MSG_CHECKING(if SQL logging is enabled)
+
+AC_ARG_ENABLE(sql-logging,
+    [  --enable-sql-logging    Enable SQL logging],
+	[
+	  AC_MSG_RESULT(yes)
+	  AC_DEFINE_UNQUOTED(ENABLE_SQL_LOGGING,1,"")
+    ],
+	[
+	   AC_MSG_RESULT(no)
+    ]
+)
 
 #
 # Many domains
